[gd_scene load_steps=4 format=2]

[ext_resource path="res://HexSpinBox.gd" type="Script" id=1]
[ext_resource path="res://assets/up.png" type="Texture" id=2]
[ext_resource path="res://assets/down.png" type="Texture" id=3]

[node name="HexSpinBox" type="LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -966.0
margin_bottom = -744.0
text = "0x00"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )
num_bits = 4

[node name="RepeatTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HB" type="HBoxContainer" parent="."]
margin_left = -12.0
margin_top = 28.0
margin_right = 38.0
margin_bottom = 96.0

[node name="VSlider" type="VSlider" parent="HB"]
margin_right = 16.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="HB"]
margin_left = 20.0
margin_right = 50.0
margin_bottom = 68.0
custom_constants/separation = 5

[node name="Up" type="Button" parent="HB/VB"]
margin_right = 30.0
margin_bottom = 22.0
action_mode = 0
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Down" type="Button" parent="HB/VB"]
margin_top = 27.0
margin_right = 30.0
margin_bottom = 49.0
action_mode = 0
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="ValueChangeDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="text_entered" from="." to="." method="_on_text_entered"]
[connection signal="timeout" from="RepeatTimer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="HB/VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="HB/VB/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="HB/VB/Down" to="." method="_on_Down_pressed"]
[connection signal="timeout" from="ValueChangeDelay" to="." method="_on_ValueChangeDelay_timeout"]
